# edelta

./: CMakeLists.txt  README.md  chunking.cpp  chunking.h  edelta.cpp  edelta.h  htable.cpp  parameters.h  util.cpp  util.h
src/: edelta.cc  edelta.h
tests/: CMakeLists.txt  encode-decode-test.cc
util/: htable.cc  htable.h  util.cc  util.h
